syntax = "proto3";
option java_multiple_files = true;
package com.magma.core.grpc_service;
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "KitEntity.proto";
import "PropertyEntity.proto";
import "DeviceEntity.proto";
import "GeoEntity.proto";
import "GeoTypeEnum.proto";
import "DmsExportService.proto";


message KitsListResponse {
  repeated Kit kitList = 1;
}

message UpdateAlertLevelRequest {
  string kitId = 1;
  int32 level = 2;
}

message UpdateIntervalRequest {
  string kitId = 1;
  int32 interval = 2;
}

message StringListRequest {
  repeated string stringList = 1;
}

message KitIdRequest {
  string id = 1;
}

message KitResponse {
  Kit kit = 1;
}

message UpdateKitRequest {
  string kitId = 1;
  Kit kit = 2;
}

message UpdateMaintainRequest {
  string kitId = 1;
  bool maintain = 2;
}

message UpdatePersistenceRequest {
  string kitId = 1;
  bool persistence = 2;
}

message ToggleAlertToKitRequest {
  string kitId = 1;
  Kit kit = 2;
}

message CreateOrUpdateAlertLimitRequest {
  string kitId = 1;
  int32 number = 2;
  AlertLimit alertLimit = 3;
}

message CreateOrUpdateAlertLimitResponse {
  AlertLimit alertLimit = 1;
}

message FindCurrentPropertyAlertLimitByKitAndNumberRequest {
  string kitId = 1;
  int32 number = 2;
}

message AlertLimitListResponse {
  repeated AlertLimit alertLimitList = 1;
}

message FindPropertyHistoryByKitAndNumberRequest {
  string kitId = 1;
  int32 number = 2;
  google.protobuf.Timestamp from = 3;
  google.protobuf.Timestamp to = 4;
}

message PropertyListResponse {
  repeated Property propertyList = 1;
}

message FindGeoHistoryByKitRequest {
  string kitId = 1;
  google.protobuf.Timestamp from = 2;
  google.protobuf.Timestamp to = 3;
  GeoType geoType = 4;
}

message GeoListResponse {
  repeated Geo geoList = 1;
}

message FindKitByDeviceExistsRequest {
  string deviceId = 1;
}

message FindDeviceByIdRequest {
  string deviceId = 1;
}

message FindDeviceByIdResponse {
  Device device = 1;
}

service CoreService {
  rpc findKits(google.protobuf.Empty) returns (KitsListResponse);
  rpc updateAlertLevel(UpdateAlertLevelRequest) returns (StringResponse);
  rpc updateInterval(UpdateIntervalRequest) returns (StringResponse);
  rpc findKitsByIdInAndOfflineIsTrue(StringListRequest) returns (KitsListResponse);
  rpc findOnlineKits(StringListRequest) returns (KitsListResponse);
  rpc findKitById(KitIdRequest) returns (KitResponse);
  rpc updateKit(UpdateKitRequest) returns (KitResponse);
  rpc findKitsByIdIn(StringListRequest) returns (KitsListResponse);
  rpc updateMaintain(UpdateMaintainRequest) returns (StringResponse);
  rpc updatePersistence(UpdatePersistenceRequest) returns (StringResponse);
  rpc toggleAlertToKit(ToggleAlertToKitRequest) returns (StringResponse);
  rpc createOrUpdateAlertLimit(CreateOrUpdateAlertLimitRequest) returns (CreateOrUpdateAlertLimitResponse);
  rpc findCurrentPropertyAlertLimitByKitAndNumber(FindCurrentPropertyAlertLimitByKitAndNumberRequest) returns (AlertLimitListResponse);
  rpc findPropertyHistoryByKitAndNumber(FindPropertyHistoryByKitAndNumberRequest) returns (PropertyListResponse);
  rpc findGeoHistoryByKit(FindGeoHistoryByKitRequest) returns (GeoListResponse);
  rpc findKitByDeviceExists(FindKitByDeviceExistsRequest) returns (KitResponse);
  rpc findDeviceById(FindDeviceByIdRequest) returns (FindDeviceByIdResponse);
}
