syntax = "proto3";

option java_multiple_files = true;

import "google/protobuf/empty.proto";

import "KitEntity.proto";
import "PropertyEntity.proto";
import "DeviceEntity.proto";
import "GeoEntity.proto";

package com.magma.core.grpc_service;

message StringResponse {
  string response = 1;
}

message ValidateCorporateRequest {
  string corporateId = 1;
}

message SendSMSBulkRequest {
  string userId = 1;
  repeated string toList = 2;
  string message = 3;
}

message FindKitsInCorporateRequest {
  string corporateId = 1;
}

message FindKitsInCorporateResponse {
  repeated Kit kits = 1;
}

message ReferenceNameRequest {
  string kitId = 1;
}

message DoSendRequest {
  string kitId = 1;
  int32 actuatorNumber = 2;
  string message = 3;
  bool sendWhenLive = 4;
}

message TriggerForActionRequest {
  Action action = 1;
}

message TriggerForPropertyRequest {
  Property property = 1;
}

message SendOfflineAlertsRequest {
  repeated Device deviceList = 1;
}

message SendHighPriorityOfflineAlertsRequest {
  repeated Device longOfflineDeviceList = 1;
}

message SendPeriodicOfflineAlertsRequest {
  repeated Offline deviceList = 1;
}

message SendOfflineDevicesWeekWiseAlertRequest {
  map<string, DeviceList> weekWiseOfflineMap = 1;
}

message DeviceList {
  repeated Device deviceList = 1;
}

message OfflineList {
  repeated Offline offlineList = 1;
}

message FindLbsRequest{
  Kit kit = 1;
}

message GeoResponse{
  Geo geo = 1;
}

message SendAlertRequest{
  Kit kit = 1;
  Alert alert = 2;
}

message SendAlertOffRequest{
  Kit kit = 1;
  Alert alert = 2;
}

message SendOfflineRequest{
  Kit kit = 1;
  Offline offline = 2;
}

message SendErrorRequest{
  Kit kit = 1;
  Error error = 2;
}



service DmsExportService {
  rpc validateCorporate(ValidateCorporateRequest) returns (google.protobuf.Empty);
  rpc sendSMSBulk(SendSMSBulkRequest) returns (google.protobuf.Empty);
  rpc findKitsInCorporate(FindKitsInCorporateRequest) returns (FindKitsInCorporateResponse);
  rpc referenceName(ReferenceNameRequest) returns (StringResponse);

  rpc doSend(DoSendRequest) returns (google.protobuf.Empty);

  rpc triggerForAction(TriggerForActionRequest) returns (google.protobuf.Empty);
  rpc triggerForProperty(TriggerForPropertyRequest) returns (google.protobuf.Empty);

  rpc sendOfflineAlerts(SendOfflineAlertsRequest) returns (google.protobuf.Empty);
  rpc sendHighPriorityOfflineAlerts(SendHighPriorityOfflineAlertsRequest) returns (google.protobuf.Empty);
  rpc sendPeriodicOfflineAlerts(SendPeriodicOfflineAlertsRequest) returns (google.protobuf.Empty);
  rpc sendMqttFailureAlerts(google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc sendOfflineDevicesWeekWiseAlert(SendOfflineDevicesWeekWiseAlertRequest) returns (google.protobuf.Empty);

  rpc findLbs(FindLbsRequest) returns (GeoResponse);

  rpc sendAlert(SendAlertRequest) returns (StringResponse);
  rpc sendAlertOff(SendAlertOffRequest) returns (StringResponse);
  rpc sendOffline(SendOfflineRequest) returns (StringResponse);
  rpc sendError(SendErrorRequest) returns (StringResponse);

}
